--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csp_meta_tag %>
 
     <%= render "shared/cdn_assets" %>
-    
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -15,6 +15,10 @@
   <body>
     <%= render "shared/navbar" %>
     
-    <%= yield %>
+    <div class="container">
+
+      <%= yield %>
+
+    </div>
   </body>
 </html>
