--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,29 +4,29 @@
       <%= @user.username %>
     </h1>
 
-    <ul class="nav nav-pills nav-justified">      
+    <ul class="nav nav-pills nav-justified">  
       <li class="nav-item">
-        <%= link_to "Posts", user_path(@user.username), class: "nav-link" %>
+        <%= active_link_to "Posts", user_path(@user.username), class: "nav-link" %>
       </li>
 
       <li class="nav-item">
-        <%= link_to "Liked photos", liked_photos_path(@user.username), class: "nav-link" %>
+        <%= active_link_to "Liked", liked_path(@user.username), class: "nav-link" %>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Feed</a>
+        <%= active_link_to "Feed", feed_path(@user.username), class: "nav-link" %>
       </li>
+
       <li class="nav-item">
-        <a class="nav-link" href="#">Followers</a>
+        <%= active_link_to "Followers", followers_path(@user.username), class: "nav-link" %>
       </li>
+
       <li class="nav-item">
-        <a class="nav-link" href="#">Following</a>
+        <%= active_link_to "Following", following_path(@user.username), class: "nav-link" %>
       </li>
     </ul>    
   </div>
 </div>
-
-<%= current_user.own_photos.count %>
 
 <% current_user.own_photos.each do |zebra| %>
   <%= render "photos/photo", giraffe: zebra %>
