--- a/app/views/users/liked.html.erb
+++ b/app/views/users/liked.html.erb
@@ -5,38 +5,7 @@
     </h1>
 
     <ul class="nav nav-tabs nav-justified">      
-      <li class="nav-item">
-        <%= active_link_to user_path(@user.username), class: "nav-link", active: :exclusive do %>
-          Posts
-          
-          <span class="badge badge-pill badge-secondary">
-            <%= @user.own_photos.size %>
-          </span>
-        <% end %>
-      </li>
-
-      <li class="nav-item">
-        <%= active_link_to liked_path(@user.username), class: "nav-link" do %>
-          Liked
-          <span class="badge badge-secondary">
-            <%= @user.likes.size %>
-          </span>
-        <% end %>
-      </li>
-
-      <li class="nav-item">
-        <%= active_link_to feed_path(@user.username), class: "nav-link" do %>
-          Feed <%= @user.feed.size %>
-        <% end %>
-      </li>
-
-      <li class="nav-item">
-        <%= active_link_to "Followers ", followers_path(@user.username), class: "nav-link" %>
-      </li>
-
-      <li class="nav-item">
-        <%= active_link_to "Following", following_path(@user.username), class: "nav-link" %>
-      </li>
+      <%= render "users/profile_nav", user: @user %>
     </ul>    
   </div>
 </div>
