--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,19 @@
 <div class="row">
   <div class="col-md-6 offset-md-3">
+    <div class="media">
+      <%= image_tag @user.avatar_image, class: "mr-3 rounded-circle", width: 128 %>
+
+      <div class="media-body">
+        <h1 class="mt-0 display-4">
+          <%= @user.username %>
+        </h1>
+
+        <h3>
+          <%= @user.name %>
+        </h3>
+        <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+      </div>
+    </div>
     <h1>
       <%= @user.username %>
     </h1>
