--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,14 @@
         <h3>
           <%= @user.name %>
         </h3>
-        <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+
+        <p>
+          <%= @user.bio %>
+        </p>
+
+        <p>
+          <%= link_to pretty_url(@user.website), @user.website %>
+        </p>
       </div>
     </div>
     <h1>
