--- a/app/views/users/_profile_nav.html.erb
+++ b/app/views/users/_profile_nav.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs nav-justified">    
+<ul class="nav nav-tabs nav-justified mb-1">    
   <li class="nav-item">
     <%=
       active_link_to user_path(user.username),
@@ -35,32 +35,6 @@
       
       <span class="badge badge-pill badge-secondary">
         <%= user.feed.count %>
-      </span>
-    <% end %>
-  </li>
-
-  <li class="nav-item">
-    <%=
-      active_link_to followers_path(user.username),
-        class: "nav-link" do %>
-    
-      Followers
-
-      <span class="badge badge-pill badge-secondary">
-        <%= user.followers.count %>
-      </span>
-    <% end %>
-  </li>
-
-  <li class="nav-item">
-    <%=
-      active_link_to following_path(user.username),
-        class: "nav-link" do %>
-    
-      Following
-
-      <span class="badge badge-pill badge-secondary">
-        <%= user.leaders.count %>
       </span>
     <% end %>
   </li>
