--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<% @user.liked_photos.each do |photo| %>
+<% @user.feed.each do |photo| %>
   <div class="row mb-4">
     <div class="col-md-6 offset-md-3">
       <%= render "photos/photo", photo: photo %>
