--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -7,7 +7,7 @@
     </h2>
   </div>
 
-  <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/FCAB_EMD_GT22CU-3_San_Pedro_-_Ascotan.jpg/640px-FCAB_EMD_GT22CU-3_San_Pedro_-_Ascotan.jpg", class: "img-fluid" %>
+  <%= image_tag photo.image, class: "img-fluid" %>
   
   <div class="card-body">
     <p class="card-text"><%= photo.caption %></p>
