--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
   <div class="container">
-    <%= link_to "Photogram", user_path(current_user.username), class: "navbar-brand" %>
+    <% if user_signed_in? %>
+      <%= link_to "Photogram", user_path(current_user.username), class: "navbar-brand" %>
+    <% else %>
+      <%= link_to "Photogram", photos_path, class: "navbar-brand" %>
+    <% end %>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
