--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,10 @@
   <body>
     <%= render "shared/navbar" %>
 
+    <div class="container">
 
-    <%= yield %>
+      <%= yield %>
+
+    </div>  
   </body>
 </html>
