--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,34 @@
+<div class="row">
+  <div class="col-md-6 offsett-md-3">
+    <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Posts</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Liked photos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Feed</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Followers</a>
+    </li>    <li class="nav-item">
+      <a class="nav-link" href="#">Following</a>
+    </li>
+  </ul>
+  
+  </div>
+</div>
+
+
+
+
+
+
 <h1>
   <%= @user.username %>
 </h1>  
+
 
 <h2>Own photos</h2>
 
