--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -24,6 +24,38 @@
           <% end %>
 
           <div class="form-group">
+            <% current_password_was_invalid = resource.errors.include?(:current_password) %>
+
+            <% current_password_class = "form-control" %>
+
+            <% if was_validated %>
+              <% if current_password_was_invalid %>
+                <% current_password_class << " is-invalid" %>
+              <% else %>
+                <% current_password_class << " is-valid" %>
+              <% end %>
+            <% end %>
+
+            <%= f.label :current_password %>
+
+            <%= f.password_field :current_password, class: current_password_class, autocomplete: "off" %>
+
+            <% if current_password_was_invalid %>
+              <% resource.errors.full_messages_for(:current_password).each do |message| %>
+                <div class="invalid-feedback d-flex">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
+
+            <small class="form-text text-muted">
+              We need your current password to confirm any changes.
+            </small>
+          </div>
+
+          <hr class="mt-4">
+
+          <div class="form-group">
             <% email_was_invalid = resource.errors.include?(:email) %>
 
             <% email_class = "form-control" %>
@@ -54,6 +86,8 @@
               </small>
             <% end %>
           </div>
+
+          <hr class="mt-4">
 
           <div class="form-group">
             <% password_was_invalid = resource.errors.include?(:password) %>
@@ -115,150 +149,8 @@
             <% end %>
           </div>
 
-          <div class="form-group">
-            <% current_password_was_invalid = resource.errors.include?(:current_password) %>
+          <hr class="mt-4">
 
-            <% current_password_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if current_password_was_invalid %>
-                <% current_password_class << " is-invalid" %>
-              <% else %>
-                <% current_password_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :current_password %>
-
-            <%= f.password_field :current_password, class: current_password_class, autocomplete: "off" %>
-
-            <% if current_password_was_invalid %>
-              <% resource.errors.full_messages_for(:current_password).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-
-            <small class="form-text text-muted">
-              We need your current password to confirm your changes.
-            </small>
-          </div>
-
-          
-          <!-- Devise Input for avatar_image start -->
-          <div class="form-group">
-            <% avatar_image_was_invalid = resource.errors.include?(:avatar_image) %>
-
-            <% avatar_image_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if avatar_image_was_invalid %>
-                <% avatar_image_class << " is-invalid" %>
-              <% else %>
-                <% avatar_image_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :avatar_image %>
-
-            <%= f.text_field :avatar_image, :class => avatar_image_class, :placeholder => "Enter avatar image" %>
-
-            <% if avatar_image_was_invalid %>
-              <% resource.errors.full_messages_for(:avatar_image).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-          <!-- Devise Input for avatar_image end -->
-          
-          <!-- Devise Input for bio start -->
-          <div class="form-group">
-            <% bio_was_invalid = resource.errors.include?(:bio) %>
-
-            <% bio_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if bio_was_invalid %>
-                <% bio_class << " is-invalid" %>
-              <% else %>
-                <% bio_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :bio %>
-
-            <%= f.text_field :bio, :class => bio_class, :placeholder => "Enter bio" %>
-
-            <% if bio_was_invalid %>
-              <% resource.errors.full_messages_for(:bio).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-          <!-- Devise Input for bio end -->
-          
-          <!-- Devise Input for name start -->
-          <div class="form-group">
-            <% name_was_invalid = resource.errors.include?(:name) %>
-
-            <% name_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if name_was_invalid %>
-                <% name_class << " is-invalid" %>
-              <% else %>
-                <% name_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :name %>
-
-            <%= f.text_field :name, :class => name_class, :placeholder => "Enter name" %>
-
-            <% if name_was_invalid %>
-              <% resource.errors.full_messages_for(:name).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-          <!-- Devise Input for name end -->
-          
-          <!-- Devise Input for private start -->
-          <div class="form-group">
-            <% private_was_invalid = resource.errors.include?(:private) %>
-
-            <% private_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if private_was_invalid %>
-                <% private_class << " is-invalid" %>
-              <% else %>
-                <% private_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :private %>
-
-            <%= f.check_box :private, class: "#{private_class} col-sm-2" %>
-
-            <% if private_was_invalid %>
-              <% resource.errors.full_messages_for(:private).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-          <!-- Devise Input for private end -->
-          
-          <!-- Devise Input for username start -->
           <div class="form-group">
             <% username_was_invalid = resource.errors.include?(:username) %>
 
@@ -284,9 +176,112 @@
               <% end %>
             <% end %>
           </div>
-          <!-- Devise Input for username end -->
+
+          <div class="form-group">
+            <% name_was_invalid = resource.errors.include?(:name) %>
+
+            <% name_class = "form-control" %>
+
+            <% if was_validated %>
+              <% if name_was_invalid %>
+                <% name_class << " is-invalid" %>
+              <% else %>
+                <% name_class << " is-valid" %>
+              <% end %>
+            <% end %>
+
+            <%= f.label :name %>
+
+            <%= f.text_field :name, :class => name_class, :placeholder => "Enter name" %>
+
+            <% if name_was_invalid %>
+              <% resource.errors.full_messages_for(:name).each do |message| %>
+                <div class="invalid-feedback d-flex">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
+
+          <div class="form-group">
+            <% avatar_image_was_invalid = resource.errors.include?(:avatar_image) %>
+
+            <% avatar_image_class = "form-control" %>
+
+            <% if was_validated %>
+              <% if avatar_image_was_invalid %>
+                <% avatar_image_class << " is-invalid" %>
+              <% else %>
+                <% avatar_image_class << " is-valid" %>
+              <% end %>
+            <% end %>
+
+            <%= f.label :avatar_image %>
+
+            <%= f.text_field :avatar_image, :class => avatar_image_class, :placeholder => "Enter avatar image" %>
+
+            <% if avatar_image_was_invalid %>
+              <% resource.errors.full_messages_for(:avatar_image).each do |message| %>
+                <div class="invalid-feedback d-flex">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
           
-          <!-- Devise Input for website start -->
+          <div class="form-group">
+            <% bio_was_invalid = resource.errors.include?(:bio) %>
+
+            <% bio_class = "form-control" %>
+
+            <% if was_validated %>
+              <% if bio_was_invalid %>
+                <% bio_class << " is-invalid" %>
+              <% else %>
+                <% bio_class << " is-valid" %>
+              <% end %>
+            <% end %>
+
+            <%= f.label :bio %>
+
+            <%= f.text_area :bio, :class => bio_class, :placeholder => "Enter bio" %>
+
+            <% if bio_was_invalid %>
+              <% resource.errors.full_messages_for(:bio).each do |message| %>
+                <div class="invalid-feedback d-flex">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
+          
+          <div class="form-group">
+            <% private_was_invalid = resource.errors.include?(:private) %>
+
+            <% private_class = "custom-control-input" %>
+
+            <% if was_validated %>
+              <% if private_was_invalid %>
+                <% private_class << " is-invalid" %>
+              <% else %>
+                <% private_class << " is-valid" %>
+              <% end %>
+            <% end %>
+
+            <div class="custom-control custom-checkbox">
+              <%= f.check_box :private, class: "#{private_class}" %>
+              <%= f.label :private, class: "custom-control-label" %>
+            </div>
+
+            <% if private_was_invalid %>
+              <% resource.errors.full_messages_for(:private).each do |message| %>
+                <div class="invalid-feedback d-flex">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
+          
           <div class="form-group">
             <% website_was_invalid = resource.errors.include?(:website) %>
 
@@ -312,7 +307,7 @@
               <% end %>
             <% end %>
           </div>
-          <!-- Devise Input for website end -->
+
           <%= f.submit "Update", class: "btn btn-block btn-outline-primary" %>
         <% end %>
 
