--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -57,7 +57,7 @@
     </p>
 
     <p>
-      <%= link_to only_host_and_path(user.website), user.website %>
+      <%= only_host_and_path(user.website) %>
     </p>
   </div>
 </div>
