--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,27 +12,34 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Resources
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/photos">Photos</a>
-            <a class="dropdown-item" href="/comments">Comments</a>
-            <a class="dropdown-item" href="/follow_requests">Follow requests</a>
-            <a class="dropdown-item" href="/likes">Likes</a>
-          </div>
-        </li>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to feed_path(current_user.username), class: "nav-link" do %>
+              <i class="fas fa-home fa-fw"></i>
+
+              Home
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to discover_path(current_user.username), class: "nav-link" do %>
+              <i class="fas fa-compass fa-fw"></i>
+
+              Discover 
+            <% end %>
+          </li>
+        <% end %>
       </ul>
 
       <ul class="navbar-nav">
         <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "Edit #{current_user.username}", edit_user_registration_path, class: "nav-link" %>
-          </li>
-
-          <li class="nav-item">
-            <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <%= image_tag current_user.avatar_image, class: "rounded-circle", width: 36 %>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to "Edit #{current_user.username}", edit_user_registration_path, class: "dropdown-item" %>
+              <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            </div>
           </li>
         <% else %>
           <li class="nav-item">
