--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -101,6 +101,61 @@
             <% end %>
           </div>
 
+          <!-- Devise Input for username start -->
+          <div class="form-group">
+            <% username_was_invalid = resource.errors.include?(:username) %>
+
+            <% username_class = "form-control" %>
+
+            <% if was_validated %>
+              <% if username_was_invalid %>
+                <% username_class << " is-invalid" %>
+              <% else %>
+                <% username_class << " is-valid" %>
+              <% end %>
+            <% end %>
+
+            <%= f.label :username %>
+
+            <%= f.text_field :username, :class => username_class, :placeholder => "Enter username" %>
+
+            <% if username_was_invalid %>
+              <% resource.errors.full_messages_for(:username).each do |message| %>
+                <div class="invalid-feedback d-flex">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
+          <!-- Devise Input for username end -->
+
+          <!-- Devise Input for name start -->
+          <div class="form-group">
+            <% name_was_invalid = resource.errors.include?(:name) %>
+
+            <% name_class = "form-control" %>
+
+            <% if was_validated %>
+              <% if name_was_invalid %>
+                <% name_class << " is-invalid" %>
+              <% else %>
+                <% name_class << " is-valid" %>
+              <% end %>
+            <% end %>
+
+            <%= f.label :name %>
+
+            <%= f.text_field :name, :class => name_class, :placeholder => "Enter name" %>
+
+            <% if name_was_invalid %>
+              <% resource.errors.full_messages_for(:name).each do |message| %>
+                <div class="invalid-feedback d-flex">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
+          <!-- Devise Input for name end -->
           
           <!-- Devise Input for avatar_image start -->
           <div class="form-group">
@@ -158,39 +213,11 @@
           </div>
           <!-- Devise Input for bio end -->
           
-          <!-- Devise Input for name start -->
-          <div class="form-group">
-            <% name_was_invalid = resource.errors.include?(:name) %>
-
-            <% name_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if name_was_invalid %>
-                <% name_class << " is-invalid" %>
-              <% else %>
-                <% name_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :name %>
-
-            <%= f.text_field :name, :class => name_class, :placeholder => "Enter name" %>
-
-            <% if name_was_invalid %>
-              <% resource.errors.full_messages_for(:name).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-          <!-- Devise Input for name end -->
-          
           <!-- Devise Input for private start -->
           <div class="form-group">
             <% private_was_invalid = resource.errors.include?(:private) %>
 
-            <% private_class = "form-control" %>
+            <% private_class = "custom-control-input" %>
 
             <% if was_validated %>
               <% if private_was_invalid %>
@@ -200,9 +227,10 @@
               <% end %>
             <% end %>
 
-            <%= f.label :private %>
-
-            <%= f.check_box :private, class: "#{private_class} col-sm-2" %>
+            <div class="custom-control custom-checkbox">
+              <%= f.check_box :private, class: "#{private_class}" %>
+              <%= f.label :private, class: "custom-control-label" %>
+            </div>
 
             <% if private_was_invalid %>
               <% resource.errors.full_messages_for(:private).each do |message| %>
@@ -213,35 +241,8 @@
             <% end %>
           </div>
           <!-- Devise Input for private end -->
-          
-          <!-- Devise Input for username start -->
-          <div class="form-group">
-            <% username_was_invalid = resource.errors.include?(:username) %>
 
-            <% username_class = "form-control" %>
 
-            <% if was_validated %>
-              <% if username_was_invalid %>
-                <% username_class << " is-invalid" %>
-              <% else %>
-                <% username_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :username %>
-
-            <%= f.text_field :username, :class => username_class, :placeholder => "Enter username" %>
-
-            <% if username_was_invalid %>
-              <% resource.errors.full_messages_for(:username).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-          <!-- Devise Input for username end -->
-          
           <!-- Devise Input for website start -->
           <div class="form-group">
             <% website_was_invalid = resource.errors.include?(:website) %>
