--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,10 +1,20 @@
 <div class="card">
-  <div class="card-body py-3">
+  <div class="card-body py-3 d-flex align-items-center justify-content-between">
     <h2 class="h5 m-0 p-0 d-flex align-items-center">
       <%= image_tag photo.owner.avatar_image, class: "rounded-circle mr-2", width: 36 %>
 
       <%= photo.owner.username %>
     </h2>
+
+    <div>
+      <%= link_to edit_photo_path(photo), class: "btn btn-link btn-sm" do %>
+        <i class="fas fa-edit fa-fw"></i>
+      <% end %>
+
+      <%= link_to photo, method: :delete, class: "btn btn-link btn-sm" do %>
+        <i class="fas fa-trash fa-fw"></i>
+      <% end %>
+    </div>
   </div>
 
   <%= image_tag photo.image, class: "img-fluid" %>
