--- a/app/views/users/discover.html.erb
+++ b/app/views/users/discover.html.erb
@@ -1,14 +1,15 @@
 <div class="row mb-4">
   <div class="col-md-6 offset-md-3">
     <h1 class="display-4">
-      feed
-    </h1>
+      discover
 
-    <p class="lead text-muted">posts by people you follow</p>
+    </h1>
+    
+    <p class="lead text-muted">posts liked by people you follow</p>
   </div>
 </div>
 
-<% @user.feed.each do |photo| %>
+<% @user.discover.each do |photo| %>
   <div class="row mb-4">
     <div class="col-md-6 offset-md-3">
       <%= render "photos/photo", photo: photo %>
