--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,11 +1,13 @@
 <%= form_with(model: photo) do |form| %>
   <% if photo.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(photo.errors.count, "error") %> prohibited this photo from being saved:</h2>
-
-      <ul>
+      <ul class="list-unstyled">
         <% photo.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+          <li>
+            <div class="alert alert-danger" role="alert">
+              <%= error.full_message %>
+            </div>
+          </li>
         <% end %>
       </ul>
     </div>
@@ -19,11 +21,6 @@
   <div class="form-group">
     <%= form.label :caption %>
     <%= form.text_area :caption, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :owner_id %>
-    <%= form.text_field :owner_id, class: "form-control" %>
   </div>
 
   <div class="actions">
