--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -3,15 +3,15 @@
     <h2 class="h5 m-0 p-0 d-flex align-items-center">
       <%= image_tag photo.owner.avatar_image, class: "rounded-circle mr-2", width: 36 %>
 
-      <%= photo.owner.username %>
+      <%= link_to photo.owner.username, user_path(photo.owner.username), class: "text-dark" %>
     </h2>
 
     <div>
-      <%= link_to edit_photo_path(photo), class: "btn btn-link btn-sm" do %>
+      <%= link_to edit_photo_path(photo), class: "btn btn-link btn-sm text-muted" do %>
         <i class="fas fa-edit fa-fw"></i>
       <% end %>
 
-      <%= link_to photo, method: :delete, class: "btn btn-link btn-sm" do %>
+      <%= link_to photo, method: :delete, class: "btn btn-link btn-sm text-muted" do %>
         <i class="fas fa-trash fa-fw"></i>
       <% end %>
     </div>
@@ -25,20 +25,8 @@
 
   <ul class="list-group list-group-flush">
     <% photo.comments.each do |comment| %>
-      <li class="list-group-item">
-        <div class="media">
-          <%= image_tag comment.author.avatar_image, class: "rounded-circle mr-2", width: 36 %>
-          <div class="media-body">
-            <h5 class="mt-0"><%= comment.author.username %></h5>
-            <p><%= comment.body %></p>
-          </div>
-        </div>
-      
-        
-      </li>
-      
+      <%= render "comments/comment", comment: comment %>
     <% end %>
-    
   </ul>
   
   <div class="card-body">
