--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -62,6 +62,7 @@
     <div class="row mb-3">
       <div class="col">
         <% follow_request = current_user.received_follow_requests.find_by(sender: @user) %>
+
         <% if follow_request %>
           <% if follow_request.pending? %>
             <% follow_request.status = "accepted" %>
@@ -72,8 +73,12 @@
               <%= form.submit "Accept follow request", class: "btn btn-outline-success btn-block mb-3" %>
             <% end %>
 
-            <%= link_to follow_request, method: :delete, class: "btn btn-outline-danger btn-block" do %>
-              Reject follow request
+            <% follow_request.status = "rejected" %>
+
+            <%= form_with(model: follow_request) do |form| %>
+              <%= form.hidden_field :status %>
+
+              <%= form.submit "Reject follow request", class: "btn btn-outline-danger btn-block mb-3" %>
             <% end %>
           <% else %>
           <% end %>
